--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -100,7 +100,7 @@
 								<i class="fa fa-user-circle" aria-hidden="true"></i>
 							</button>
 
-							<div class="dropdown-menu dropdown-menu-lg-end">
+							<div class="dropdown-menu dropdown-menu-lg-end" style="width: 200px;">
 								<div class="text-center">
 									<a class="link-danger fw-bolder" th:href="@{/users/{id}(id=${currentUser.id})}"
 										th:text=${currentUser.fullName}></a>
