Fix chat by passing an Oauth2 access_token into a query parameter

--- a/src/main/resources/templates/users/messages.html
+++ b/src/main/resources/templates/users/messages.html
@@ -76,6 +76,7 @@
 
 
 	<script type="text/javascript" th:inline="javascript">
+		const accessToken = /*[[${accessToken}]]*/null;
 		const from = /*[[${#authentication.name}]]*/null;
 		
 		let conversations = /*[[${chats}]]*/null;
