--- a/src/main/resources/templates/admin/subjects.html
+++ b/src/main/resources/templates/admin/subjects.html
@@ -5,147 +5,149 @@
 <meta charset="utf-8">
 </head>
 <body>
-	<div class="row mt-4">
-		<div class="col-lg-6 mb-3">
-			<div class="alert alert-success alert-dismissible fade show" role="alert"
-				th:if="${!#strings.isEmpty(message)}">
-				<th:block th:text=${message} />
-				<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-			</div>
-
-			<div class="card">
-				<div class="card-body">
-					<h4 class="card-title text-center">Disciplina</h4>
-
-					<form action="#" method="post" th:object="${subject}">
-						<div class="mb-3">
-							<label class="form-label" for="nameInput">Nome</label>
-
-							<input type="text" id="nameInput" class="form-control" placeholder="Nome da Disciplina"
-								th:field="*{name}">
-
-							<span class="text-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Nome inválido</span>
-						</div>
-
-						<div class="row">
-							<div class="col-md-6 mb-3">
-								<label class="form-label" for="codeInput">Código</label>
-
-								<input type="text" id="codeInput" class="form-control" placeholder="Código" th:field="*{code}">
-
-								<span class="text-danger" th:if="${#fields.hasErrors('code')}" th:errors="*{code}">Código
-									inválido</span>
-							</div>
-
-							<div class="col-md-6 mb-3">
-								<label class="form-label" for="semester">Semestre</label>
-
-								<select class="form-select" id="semester" name="semester">
-									<option th:each="i : ${#numbers.sequence(1, 10)}" th:value="${i}" th:text="${i}"
-										th:selected="${i==1}"></option>
-								</select>
-							</div>
-						</div>
-
-						<div class="mb-3">
-							<label class="form-label" for="description">Ementa</label>
-
-							<textarea id="description" class="form-control" th:field="*{description}" rows="3" maxlength="1000">
-							</textarea>
-
-							<span class="text-danger" th:if="${#fields.hasErrors('description')}" th:errors="*{description}">Descrição
-								inválida</span>
-						</div>
-
-						<div class="mb-3">
-							<label class="form-label" for="objective">Objetivo</label>
-
-							<textarea id="objective" class="form-control" th:field="*{objective}" rows="2" maxlength="500">
-							</textarea>
-
-							<span class="text-danger" th:if="${#fields.hasErrors('objective')}" th:errors="*{objective}">Objetivo
-								inválido</span>
-						</div>
-
-						<button type="submit" class="btn btn-danger form-control">Cadastrar</button>
-					</form>
+	<div class="container">
+		<div class="row mt-4">
+			<div class="col mb-3" sec:authorize="hasAnyRole('ROLE_ADMIN')">
+				<div class="alert alert-success alert-dismissible fade show" role="alert"
+					th:if="${!#strings.isEmpty(message)}">
+					<th:block th:text=${message} />
+					<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 				</div>
-			</div>
-
-			<hr>
-		</div>
-
-		<div class="col-lg-6">
-			<h3>Todas as Disciplinas</h3>
-
-			<table id="table" class="table table-sm table-striped table-bordered table-hover" style="cursor: pointer;">
-				<thead class="thead-dark">
-					<tr>
-						<th>Código</th>
-						<th>Nome</th>
-						<th>Semestre</th>
-					</tr>
-				</thead>
-
-				<tbody>
-					<tr th:each="subject : ${subjects}" th:data-id="${subject.id}" data-bs-toggle="modal"
-						data-bs-target="#subjectsModal">
-						<td id="codeTd" class="align-middle" th:text="${subject.code}"></td>
-						<td id="nameTd" class="align-middle" th:text="${subject.name}"></td>
-						<td id="semesterTd" class="align-middle" th:text="${subject.semester}"></td>
-					</tr>
-				</tbody>
-			</table>
-
-			<!-- Modal -->
-			<div class="modal fade" id="subjectsModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-				aria-hidden="true">
-				<div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
-					<div class="modal-content">
-						<div class="modal-header">
-							<h5 class="modal-title" id="modalTitle" th:text="'Atualizar Disciplina'">Atualizar Informações da
-								Disciplina</h5>
-							<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-						</div>
-						<div class="modal-body">
+	
+				<div class="card">
+					<div class="card-body">
+						<h4 class="card-title text-center">Disciplina</h4>
+	
+						<form action="#" method="post" th:object="${subject}">
 							<div class="mb-3">
-								<label class="form-label">Nome</label>
-								<input id="updatedName" type="text" class="form-control" maxlength="255" required>
+								<label class="form-label" for="nameInput">Nome</label>
+	
+								<input type="text" id="nameInput" class="form-control" placeholder="Nome da Disciplina"
+									th:field="*{name}">
+	
+								<span class="text-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Nome inválido</span>
 							</div>
-
+	
 							<div class="row">
 								<div class="col-md-6 mb-3">
-									<label class="form-label">Código</label>
-									<input id="updatedCode" type="text" class="form-control" maxlength="20" required>
+									<label class="form-label" for="codeInput">Código</label>
+	
+									<input type="text" id="codeInput" class="form-control" placeholder="Código" th:field="*{code}">
+	
+									<span class="text-danger" th:if="${#fields.hasErrors('code')}" th:errors="*{code}">Código
+										inválido</span>
 								</div>
-								
+	
 								<div class="col-md-6 mb-3">
-									<label class="form-label" for="updatedSemester">Semestre</label>
-
-									<select class="form-select" id="updatedSemester">
-										<option th:each="i : ${#numbers.sequence(1, 8)}" th:value="${i}" th:text="${i}"></option>
+									<label class="form-label" for="semester">Semestre</label>
+	
+									<select class="form-select" id="semester" name="semester">
+										<option th:each="i : ${#numbers.sequence(1, 10)}" th:value="${i}" th:text="${i}"
+											th:selected="${i==1}"></option>
 									</select>
 								</div>
 							</div>
-
+	
 							<div class="mb-3">
-								<label for="description" class="form-label">Descrição</label>
-								<textarea id="updatedDescription" class="form-control" rows="3" maxlength="1000" required></textarea>
+								<label class="form-label" for="description">Ementa</label>
+	
+								<textarea id="description" class="form-control" th:field="*{description}" rows="3" maxlength="1000">
+								</textarea>
+	
+								<span class="text-danger" th:if="${#fields.hasErrors('description')}" th:errors="*{description}">Descrição
+									inválida</span>
 							</div>
-
+	
 							<div class="mb-3">
-								<label for="updatedObjective" class="form-label">Objetivo</label>
-								<textarea id="updatedObjective" class="form-control" rows="2" maxlength="500" required></textarea>
+								<label class="form-label" for="objective">Objetivo</label>
+	
+								<textarea id="objective" class="form-control" th:field="*{objective}" rows="2" maxlength="500">
+								</textarea>
+	
+								<span class="text-danger" th:if="${#fields.hasErrors('objective')}" th:errors="*{objective}">Objetivo
+									inválido</span>
 							</div>
-						</div>
-						<div class="modal-footer">
-							<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-							<button id="updateSubject" type="button" class="btn btn-danger">Atualizar</button>
+	
+							<button type="submit" class="btn btn-danger form-control">Cadastrar</button>
+						</form>
+					</div>
+				</div>
+	
+				<hr>
+			</div>
+	
+			<div class="col">
+				<h3>Disciplinas</h3>
+	
+				<table id="table" class="table table-sm table-striped table-bordered table-hover" style="cursor: pointer;">
+					<thead class="thead-dark">
+						<tr>
+							<th>Código</th>
+							<th>Nome</th>
+							<th>Semestre</th>
+						</tr>
+					</thead>
+	
+					<tbody>
+						<tr th:each="subject : ${subjects}" th:data-id="${subject.id}" data-bs-toggle="modal"
+							data-bs-target="#subjectsModal">
+							<td id="codeTd" class="align-middle" th:text="${subject.code}"></td>
+							<td id="nameTd" class="align-middle" th:text="${subject.name}"></td>
+							<td id="semesterTd" class="align-middle" th:text="${subject.semester}"></td>
+						</tr>
+					</tbody>
+				</table>
+	
+				<!-- Modal -->
+				<div class="modal fade" id="subjectsModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+					aria-hidden="true">
+					<div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
+						<div class="modal-content">
+							<div class="modal-header">
+								<h5 class="modal-title" id="modalTitle" th:text="'Atualizar Disciplina'">Atualizar Informações da
+									Disciplina</h5>
+								<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+							</div>
+							<div class="modal-body">
+								<div class="mb-3">
+									<label class="form-label">Nome</label>
+									<input id="updatedName" type="text" class="form-control" maxlength="255" required>
+								</div>
+	
+								<div class="row">
+									<div class="col-md-6 mb-3">
+										<label class="form-label">Código</label>
+										<input id="updatedCode" type="text" class="form-control" maxlength="20" required>
+									</div>
+									
+									<div class="col-md-6 mb-3">
+										<label class="form-label" for="updatedSemester">Semestre</label>
+	
+										<select class="form-select" id="updatedSemester">
+											<option th:each="i : ${#numbers.sequence(1, 8)}" th:value="${i}" th:text="${i}"></option>
+										</select>
+									</div>
+								</div>
+	
+								<div class="mb-3">
+									<label for="description" class="form-label">Descrição</label>
+									<textarea id="updatedDescription" class="form-control" rows="3" maxlength="1000" required></textarea>
+								</div>
+	
+								<div class="mb-3">
+									<label for="updatedObjective" class="form-label">Objetivo</label>
+									<textarea id="updatedObjective" class="form-control" rows="2" maxlength="500" required></textarea>
+								</div>
+							</div>
+							<div class="modal-footer">
+								<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+								<button id="updateSubject" type="button" class="btn btn-danger">Atualizar</button>
+							</div>
 						</div>
 					</div>
 				</div>
+	
 			</div>
-
 		</div>
 	</div>
 
